--- a/boarding/src/layouts/BaseLayout.astro
+++ b/boarding/src/layouts/BaseLayout.astro
@@ -3,6 +3,9 @@ import HeadSEO from '../components/HeadSEO.astro'
 import Footer from '../components/Footer.astro'
 import Header from '../components/Header.astro'
 
+import { Toaster } from '../components/ui/toaster'
+import { ESignature } from '../components/form/ESignature'
+
 interface Props {
   title?: string | undefined
   description?: string | undefined
@@ -40,5 +43,7 @@ const { title, description, ogImage } = Astro.props
       </main>
       <Footer />
     </div>
+    <Toaster client:load />
+    <ESignature client:load />
   </body>
 </html>
