form cleanups and e-sign UI improvements

--- a/boarding/src/pages/index.astro
+++ b/boarding/src/pages/index.astro
@@ -4,8 +4,8 @@ import { PayabliForm } from '../components/PayabliForm'
 ---
 
 <BaseLayout
-  title="Astro Shadcn UI Template"
-  description="This template helps you build apps with Astro, Tailwind CSS, and Shadcn UI."
+  title="Boarding Application"
+  description="Get started boarding onto our payment platform."
 >
   <div class="mx-2 mt-12">
     <PayabliForm client:load>
