--- a/boarding/src/components/Footer.astro
+++ b/boarding/src/components/Footer.astro
@@ -1,3 +1,7 @@
+---
+import { Heart } from "lucide-react";
+---
+
 <footer class="border-t py-6 md:px-8 md:py-0">
   <div
     class="container flex flex-col items-center justify-between gap-4 md:h-24 md:flex-row"
@@ -5,25 +9,20 @@
     <p
       class="text-center text-sm leading-loose text-muted-foreground md:text-left"
     >
-      Built by{' '}
+      Built by
       <a
-        href="https://github.com/payabli"
+        href="https://www.payabli.com/"
         target="_blank"
         rel="noreferrer"
-        class="font-medium underline underline-offset-4"
+        class="font-medium underline underline-offset-4">{'Payabli'}</a
       >
-        Payabli
-      </a>
-      . The source code is available on{' '}
+      with <Heart size={20} className="inline-block"/>. The source code is available on{' '}
       <a
-        href="https://github.com/AREA44/astro-shadcn-ui-template"
+        href="https://github.com/payabli/examples"
         target="_blank"
         rel="noreferrer"
-        class="font-medium underline underline-offset-4"
-      >
-        GitHub
-      </a>
-      .
+        class="font-medium underline underline-offset-4">GitHub</a
+      >.
     </p>
   </div>
 </footer>
