db logic rewrite: indexedDB -> drizzle w/ sqlite

--- a/boarding/src/components/ThemeToggle.astro
+++ b/boarding/src/components/ThemeToggle.astro
@@ -1,9 +1,9 @@
 ---
 import { SunIcon, MoonIcon } from '@radix-ui/react-icons'
-import { Button } from '@/components/ui/button'
+import { Button } from '../components/ui/button'
 ---
 
-<Button variant="ghost" size="icon" id="themeToggle">
+<Button variant="ghost" size="icon" id="themeToggle" className="rounded-none">
   <SunIcon className="h-[1.5rem] w-[1.3rem] dark:hidden" />
   <MoonIcon className="hidden h-5 w-5 dark:block" />
   <span class="sr-only">Toggle theme</span>
