implemented better-auth as an extra scaffolded authentication layer for the application

--- a/boarding/src/components/Header.astro
+++ b/boarding/src/components/Header.astro
@@ -3,9 +3,7 @@ import { buttonVariants } from '../components/ui/button'
 import ThemeToggle from '../components/ThemeToggle.astro'
 ---
 
-<header
-  class="flex justify-end fixed top-0 z-50 w-full"
->
+<header class="flex justify-end fixed top-0 z-50 w-full">
     <div class="rounded-bl border-b-[1px] border-l-[1px] border-border bg-background">
         <ThemeToggle />
     </div>
