added payment method tokenization to all sdk applications

--- a/sdk/cs-sdk/Views/Shared/_Layout.cshtml
+++ b/sdk/cs-sdk/Views/Shared/_Layout.cshtml
@@ -18,9 +18,10 @@
             <ul>
                 <li><strong>Payabli SDK Test</strong></li>
             </ul>
-            <ul hx-boost="true">
+            <ul>
                 <li><a href="/">Create Customer</a></li>
                 <li><a href="/Home/List">List Customers</a></li>
+                <li><a href="/Home/Transaction">Process Transaction</a></li>
             </ul>
         </nav>
     </main>
