--- a/sdk/ts-sdk/src/layouts/main.astro
+++ b/sdk/ts-sdk/src/layouts/main.astro
@@ -26,6 +26,7 @@
       <ul hx-boost="true">
         <li><a href="/">Create Customer</a></li>
         <li><a href="/list">List Customers</a></li>
+        <li><a href="/transaction">Process Transaction</a></li>
       </ul>
     </nav>
     </main>
