--- a/sdk/go-sdk/templates/create.html
+++ b/sdk/go-sdk/templates/create.html
@@ -18,9 +18,10 @@
             <ul>
                 <li><strong>Payabli SDK Test</strong></li>
             </ul>
-            <ul hx-boost="true">
+            <ul>
                 <li><a href="/">Create Customer</a></li>
                 <li><a href="/list">List Customers</a></li>
+                <li><a href="/transaction">Make Transaction</a></li>
             </ul>
         </nav>
     </main>
