--- a/sdk/go-sdk/templates/transaction.html
+++ b/sdk/go-sdk/templates/transaction.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
     
     <!-- Using pico.css for styling -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.const achConfig = {
-    type: "methodEmbedded",
-    rootContainer: "pay-component-1",
-    token: "{{.PublicToken}}",
-    entryPoint: "{{.EntryPoint}}",ss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.css">
     
     <!-- Using htmx for AJAX requests -->
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
